--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         run: yarn install --frozen-lockfile
 
       - name: Run linter
-        run: yarn lint
+        run: yarn lint --quiet
 
       - name: Run tests
         run: yarn test
